# CopyKatpy

./: .gitignore  README.md  pyproject.toml
src/copykat_gpu/: __init__.py  api.py  backend.py  kernels.py  reference.py
src/copykat_gpu/data/: dna_hg20_bins.tsv  hg20_cell_cycle_genes.tsv
tests/: test_api.py
