[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "copykat-gpu"
version = "0.1.0"
description = "A PyTorch/CUDA implementation of CopyKAT-style single-cell CNV inference."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-2.0-only"}
authors = [{name = "CopyKAT Python contributors"}]
dependencies = ["numpy>=1.24", "pandas>=2.0", "scipy>=1.10", "torch>=2.1"]

[project.optional-dependencies]
io = ["anndata>=0.10"]
clustering = ["scikit-learn>=1.3"]
test = ["pytest>=8"]

[tool.setuptools.package-data]
copykat_gpu = ["data/*.tsv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
